--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@objectpartners/presentation-starter-kit",
+  "name": "@objectpartners/mmi-pt-uno-starter-presentation",
   "private": true,
   "version": "1.0.0",
   "main": "dist/index.js",
-  "author": "Dustin Schau <dustin.schau@objectpartners.com>",
+  "author": "Scott Poulin <scott.poulin@objectpartners.com>",
   "license": "MIT",
   "scripts": {
     "precommit": "pretty-quick --staged",
@@ -46,7 +46,6 @@
     "webpack-dev-server": "~3.1.3"
   },
   "dependencies": {
-    "@objectpartners/revealjs-theme": "~0.0.0",
     "prismjs": "~1.14.0",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
